Grammar fixes, translation of exercises

--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -401,7 +401,7 @@
     "````\n",
     "\n",
     "### Weighted average\n",
-    "It may happen that not all repeated measurements are equally reliable. If measurement 1 has half the uncertainty of measurement 2, then it seems logical that the average is calculated by $\\frac{2 \\cdot x_1 + 1 \\cdot x_2}{3}$. We then refer to this as a weighted average. The question then, of course, is how to determine the reliability and how to arrive at our weighting factor. Fortunately, we have just found a measure for this, namely the measurement uncertainty. The weighting factor is defined by:\n",
+    "It may happen that not all repeated measurements are equally reliable. If measurement 1 has half the uncertainty of measurement 2, then it seems logical that the average is calculated by $\\frac{2 \\cdot x_1 + 1 \\cdot x_2}{3}$. We then refer to this as a weighted average. The question is, of course, how to determine the reliability and how to arrive at our weighting factor. Fortunately, we have just found a measure for this, namely the measurement uncertainty. The weighting factor is defined by:\n",
     "\n",
     "$$w_i = \\frac{1}{u(x_i)^2}$$ (eq:weegfactor)\n",
     "\n",
@@ -443,6 +443,7 @@
     "        ></iframe>\n",
     "    </div>\n",
     "</div>\n",
+    "\\\n",
     "\n",
     "As indicated, there is variation in repeated measurements. We can view the physical measurement $M$ as the sum of the physical value $G$ and noise $s$:\n",
     "\n",
@@ -659,7 +660,7 @@
     "````{admonition} Example: Poisson\n",
     ":class: dropdown, tip\n",
     "An average of 20 people eat at a restaurant every day. What does the probability distribution of the number of people who come to eat look like? \\\n",
-    "The probability distribution of the number of visitors is shown in {numref}`Figure {number} <fig:MO:restaurant>` The probability is described by: $P(X = k) = \\frac{20^k e^{-20}}{k!}$.\n",
+    "The probability distribution of the number of visitors is shown in {numref}`Figure {number} <fig:MO:restaurant>`. The probability is described by: $P(X = k) = \\frac{20^k e^{-20}}{k!}$.\n",
     "\n",
     "```{figure} Figures/restaurant.png\n",
     "---\n",
@@ -699,7 +700,7 @@
     "\n",
     "\n",
     "#### Monte Carlo simulation\n",
-    "Such a uniform distribution is useful in Monte Carlo simulations, for example. In such a simulation, a large number of random points are generated and then examined to see where they end up. For an integral that cannot be solved analytically, you can still calculate the surface area, namely:\n",
+    "Such a uniform distribution is useful in Monte Carlo simulations, for example. In such a simulation, a large number of random points are generated and then examined to see where they end up. For an integral that cannot be solved analytically, you can still calculate the surface area: \n",
     "\n",
     "$$ \\int_{a}^{b} f(x) dx = \\frac{N}{N_{totaal}} \\cdot (b-a) \\cdot (y_{max} - y_{min}) $$ (eq:unif)\n",
     "\n",
@@ -748,23 +749,23 @@
     "\n",
     "\n",
     "#### Error function(s)\n",
-    "There are two kinds of error functions, the $\\text{erf}(x)$ and the $\\text{Erf}(x_{out},\\overline{x},\\sigma)$ (also called the cdf function). These are defined as: \n",
+    "There are two kinds of error functions, the $\\text{erf}(x)$ and the $\\text{Erf} \\space (x_{out},\\overline{x},\\sigma)$ (also called the cdf function). These are defined as: \n",
     "\n",
     "$$\n",
     "\\begin{align*}\n",
     "    \\text{erf}(x) &= \\frac{2}{\\sqrt{\\pi}} \\int_0^x e^{-t^2} dt \\\\\n",
-    "    \\text{Erf}(x, \\overline{x}, \\sigma_x) &= \\frac{1}{2} \\left[1 + \\text{erf}\\left(\\frac{x - \\overline{x}}{\\sqrt{2}\\sigma_x}\\right)\\right]\n",
+    "    \\text{Erf} \\space (x, \\overline{x}, \\sigma_x) &= \\frac{1}{2} \\left[1 + \\text{erf}\\left(\\frac{x - \\overline{x}}{\\sqrt{2}\\sigma_x}\\right)\\right]\n",
     "\\end{align*}\n",
     "$$ (eq:Erf)\n",
     "\n",
-    "A plot of both function is given in {numref}`Figuur {number} <fig:MO:erfplots>`\n",
+    "A plot of both functions is given in {numref}`Figuur {number} <fig:MO:erfplots>`\n",
     "\n",
     "```{figure} Figures/erfplots.png\n",
     "---\n",
     "width: 80%\n",
     "name: fig:MO:erfplots\n",
     "---\n",
-    "2 plots, een met de $\\text{erf}(x)$ en een met de $\\text{Erf}(x_{out},\\overline{x},\\sigma)$ (rechts), $\\overline{x} = 10$ en $\\sigma = 5$.\n",
+    "2 plots, one with $\\text{erf}(x)$ (left) and one with $\\text{Erf}(x_{out},\\overline{x},\\sigma)$ (right), $\\overline{x} = 10$ and $\\sigma = 5$.\n",
     "```\n",
     "\n",
     "Both functions can be found in the `scipy.special.erf` and `scipy.stats.norm.cdf` functions. When using the `Erf` or `scipy.stats.norm.cdf` function (or the site), keep in mind that when investigating an upward *outlier*, the functions will all return a value above 0.5. This means that you must do $P_{out\\_new} = 1 - P_{out}$. The final code should therefore be something like this:"
@@ -827,11 +828,11 @@
     ":class: dropdown, tip\n",
     "*Question*: \n",
     "\n",
-    "Determine the mean value (including its uncertainty) of the measurement serie.\n",
+    "Determine the mean value (including its uncertainty) of the measurement series.\n",
     "```{list-table}\n",
     ": header-rows : 1\n",
-    ": name: herhaalde_meting\n",
-    "* - Meting\n",
+    ": name: repeated_measurement\n",
+    "* - Measurement\n",
     "  - $U$ (V)\n",
     "* - 1\n",
     "  - 5.050\n",
@@ -848,20 +849,20 @@
     "*Answer:*\n",
     "\n",
     "First, we determine the mean value $\\mu(U)=\\overline{U}=\\frac{1}{N}\\sum_{i=1}^{N} U_i = 5.000 \\mathrm{V}$. \\\n",
-    "Then we determine the standard deviation $\\sigma(U) = \\sqrt{\\frac{1}{N-1}\\sum_{i=1}^N (U_i-\\overline{U})^2} = 0.038078866 \\mathrm{V}$.\n",
+    "Then we determine the standard deviation $\\sigma(U) = \\sqrt{\\frac{1}{N-1}\\sum_{i=1}^N (U_i-\\overline{U})^2} = 0.038078866 \\mathrm{V}$. \\\n",
     "Finally, we determine the uncertainty in the average value $u(U) = \\frac{\\sigma(U)} {\\sqrt{N}} = 0.017029386 \\mathrm{V}$.\n",
     "We have fewer than $10^3$ measurement points, so we round the uncertainty to 1 decimal place: $u(U) = 0.02 \\mathrm{V}$.\n",
     "The uncertainty has two decimal places, so we adjust our mean accordingly: $\\overline{U} = 5.00 \\pm 0.02 \\mathrm{V}$.\n",
     "````\n",
     "\n",
-    "There is another important point regarding rounding. If you were to round all fives up, you would introduce a systematic error; you always round up. The agreement is that if the number before the $5$ is even, you round down ($33.45 \\rightarrow 33.4$), and if the number before the $5$ is odd, you round up ($33.55 \\rightarrow 33.6$). In addition, in some fields it is good practice not to round down the uncertainty, as this prevents underestimating the uncertainty. However, we do not pay attention to this in physics practicals.\n",
+    "There is another important point regarding rounding. If you were to round all fives up, you would introduce a systematic error; you always round up. The agreement is that if the number before the $5$ is even, you round down ($33.45 \\rightarrow 33.4$), and if the number before the $5$ is odd, you round up ($33.55 \\rightarrow 33.6$). In addition, in some fields it is good practice not to round down the uncertainty, as this prevents underestimating the uncertainty. However, we do not take this into account in physics practicals.\n",
     "\n",
     "\n",
     "**Table:** Powers of 10, including their symbols. \n",
     "| power of 10 | $10^{-12}$ | $10^{-9}$ | $10^{-6}$ | $10^{-3}$ | $10^{-2}$ | $10^{-1}$ | $10^1$ | $10^2$ | $10^3$ | $10^6$ | $10^9$ | $10^{12}$ |\n",
     "|--------------|------------|-----------|-----------|-----------|-----------|-----------|--------|--------|--------|--------|--------|-----------|\n",
-    "| voorvoegsel  | pico       | nano      | micro     | milli     | centi     | deci      | deca   | hecto  | kilo   | mega   | giga   | tera      |\n",
-    "| symbool      | p          | n         | $\\mu$     | m         | c         | d         | da     | h      | k      | M      | G      | T         |\n",
+    "| prefox  | pico       | nano      | micro     | milli     | centi     | deci      | deca   | hecto  | kilo   | mega   | giga   | tera      |\n",
+    "| symbol      | p          | n         | $\\mu$     | m         | c         | d         | da     | h      | k      | M      | G      | T         |\n",
     "\n",
     "For additional information about significant figures, you can watch this [*video*](https://www.youtube.com/watch?v=Gn97hpEkTiM).\n",
     "\n",
@@ -959,17 +960,17 @@
     "\n",
     "```{admonition} Example: \n",
     ":class: dropdown, tip\n",
-    "*Vraag:* \n",
+    "*Question:* \n",
     "\n",
-    "Bepaal de vergelijking voor de onzekerheid in $f(x) = 2x\\cos{x}$?\n",
+    "Determine the equation of the uncertainty in $f(x) = 2x\\cos{x}$?\n",
     "\n",
-    "*Antwoord:* \n",
+    "*Answer:* \n",
     "\n",
-    "We gebruiken de calculus approach. Hiertoe bepalen we de afgeleide van $f(x)$ naar $x$.\n",
+    "We make use of the calculus approach. To do this, we determine the derivative of $f(x)$ to $x$.\n",
     "\n",
     "$$\\frac{\\partial f(x)}{\\partial x} = \\cos{x}\\frac{\\partial (2x)}{\\partial x} + 2x\\frac{\\partial \\cos{x}}{\\partial x} = 2\\cos{x} - 2x\\sin{x}$$\n",
     "\n",
-    "Vervolgens passen we de calculus approach toe:\n",
+    "Next, we apply the calculus approach:\n",
     "\n",
     "$$u(f) = \\frac{\\partial f(x)}{\\partial x}u(x) =  2(\\cos{x} - x\\sin{x})u(x)$$\n",
     "```\n",
@@ -989,13 +990,13 @@
     "```{exercise} \n",
     ":label: ex-doos\n",
     ":class: dropdown\n",
-    "Eric weegt een doos. De massa is (56 $\\pm$ 2) g. De doos heeft zijden van (3.0 $\\pm$ 0.1) cm.\n",
+    "Eric is weighing a box. The mass is (56 $\\pm$ 2) g. The box's sides are (3.0 $\\pm$ 0.1) cm. \n",
     "\n",
-    "1.  Bereken de zwaartekracht op de doos.\n",
+    "1.  Calculate the gravity working on the box.\n",
     "\n",
-    "2.  Bereken het volume van de doos.\n",
+    "2.  Calculate the volume of the box.\n",
     "\n",
-    "3.  Bereken de dichtheid van de doos.\n",
+    "3.  Calculate the density of the box.\n",
     "```\n",
     "\n",
     "````{solution} ex-doos\n",
@@ -1010,28 +1011,28 @@
     "```{admonition} Example: \n",
     ":class: dropdown, tip\n",
     "\n",
-    "*Vraag:* \n",
+    "*Question:* \n",
     "\n",
-    "Bereken de onzekerheid in $g(x,y) = \\ln(x)e^{2y}$\n",
+    "Calculate the uncertainty in $g(x,y) = \\ln(x)e^{2y}$\n",
     "\n",
-    "*Antwoord:* \n",
+    "*Answer:* \n",
     "\n",
-    "We gebruiken de calculus approach. Hiertoe bepalen we de partiële afgeleides van $g(x)$ naar $x$ en $y$.\n",
+    "We use the calculus approach. To do this, we determine the partial derivatives of $g(x)$ to $x$ and $y$.\n",
     "\n",
     "$$\\begin{aligned}\n",
     "    \\frac{\\partial g(x,y)}{\\partial x} &= \\frac{1}{x}e^{2y}\\\\\n",
     "    \\frac{\\partial g(x,y)}{\\partial y} &= 2\\ln(x)e^{2y}\n",
     "\\end{aligned}$$ \n",
     "\n",
-    "Vervolgens tellen we de onzekerheden kwadratisch op:\n",
+    "Next, we add those uncertainties quadratically:\n",
     "\n",
     "$$u(g)^2 = \\sum_{i=1}^n \\left(\\frac{\\partial g(x_i)}{\\partial x_i}u(x_i)\\right)^2 =  \\left(\\frac{1}{x}e^{2y}u(x)\\right)^2 + \\left(2\\ln(x)e^{2y}u(y)^2\\right)^2$$\n",
     "```\n",
     "\n",
-    "```{tip} Standaard functies \n",
+    "```{tip} Standard functions \n",
     ":class: dropdown\n",
-    "**Tabel:** Overzicht van veelgebruikte functies en bijbehorende onzekerheden. \n",
-    ">| Functie $Z(x,y)$ | $\\frac{dZ}{dx}$ | Onzekerheid $u(Z)$                                                  |\n",
+    "**Tabel:** Overview of widely used functions and the corresponding uncertainties. \n",
+    ">| Function $Z(x,y)$ | $\\frac{dZ}{dx}$ | Uncertainty $u(Z)$                                                  |\n",
     ">|------------------|-----------------|--------------------------------------------------------------------|\n",
     ">| $x + y$          | 1               | $\\sqrt{u(x)^2+u(y)^2}$                                             |\n",
     ">| $x \\cdot y$      | y               | $\\sqrt{(y\\cdot u(x))^2+(x\\cdot u(y))^2}$                           |\n",
@@ -1044,11 +1045,11 @@
     ">| $\\tan{x}$        | $1+\\tan^2{x}$   | $(1+\\tan^2{x})\\cdot u(x)$ or $(1+Z^2) \\cdot u(x)$                    |\n",
     "```\n",
     "\n",
-    "```{tip} Rekenregels\n",
+    "```{tip} Calculation rules\n",
     ":class: dropdown\n",
     ">**Reminder:**\n",
     ">\n",
-    ">| Functie                | Afgeleide                          |\n",
+    ">| Function                | Derivative                          |\n",
     ">|------------------------|------------------------------------|\n",
     ">| $f(x)\\cdot g(x)$       | $f'(x)g(x) + f(x)g'(x)$            |\n",
     ">| $\\frac{f(x)}{g(x)}$    | $\\frac{g(x)f'(x)-f(x)g'(x)}{g'(x)^2}$ |\n",
@@ -1058,7 +1059,7 @@
     "Please note that if you have two values **A** and **B** that are close to each other and you subtract them from each other (**A**-**B**), your error may well be much greater than the difference between those two values. In such cases, you will need to look for alternative measurement methods that yield a smaller relative uncertainty. See below for an example for inspiration.\n",
     "\n",
     "\n",
-    "````{admonition} Example: verkleinen meetonzekerheid:\n",
+    "````{admonition} Example: reducing measurement uncertainty\n",
     ":class: dropdown, tip\n",
     "\n",
     "For an experiment, we want to determine the frequency difference $\\Delta f$ between two tones $f_0$ and $f_1$. After a measurement, it turns out that $f_0 = (1250 \\pm 3)$ Hz and $f_1 = (1248 \\pm 4)$ Hz. The difference (including uncertainty) is therefore $\\Delta f = (2 \\pm 5)$ Hz (check).\n",
@@ -1070,7 +1071,7 @@
     "width: 80%\n",
     "name: fig:MO:freqverschil\n",
     "---\n",
-    "Tijdsafhankelijke meting van afzonderlijke signalen.\n",
+    "Time dependent measurement of separate signals.\n",
     "```\n",
     "\n",
     "```{figure} Figures/freqverschil_som.png\n",
@@ -1078,7 +1079,7 @@
     "width: 80%\n",
     "name: fig:MO:alternatief\n",
     "---\n",
-    "Een alternatieve methode om het frequentieverschil van twee signalen te bepalen. Som van beide signalen. Het frequentieverschil is twee keer de frequentie van het *omhulsel* van de som. </figcaption>\n",
+    "An alternative method to determine the frequency difference of two signals. Sum of both signals. The frequency difference is twice the frequency of the *cover* of the sum. </figcaption>\n",
     "```\n",
     "````\n",
     "\n",
@@ -1086,17 +1087,17 @@
     ":label: ex:lamp\n",
     ":class: dropdown\n",
     "\n",
-    "De tabel hieronder weergeeft metingen van het voltage over en de stroom door een lamp.\n",
+    "The table below gives measurements of the voltage of and current through a lamp. \n",
     "\n",
-    "**Tabel**: Meting aan een lamp.\n",
+    "**Tabel**: Measurements of a lamp.\n",
     "| $U$(V) | $u(U)$(V) | $I$(mA) | $u(I)$(mA) |\n",
     "|--------|-----------|---------|------------|\n",
     "|  6.0   |    0.2    |   0.25  |    0.1     |\n",
-    "    1.  Bepaal het vermogen dat de lamp opneemt.\n",
+    "    1.  Determine the power that the lamp absorps.\n",
     "\n",
-    "    2.  Bepaal de weerstand van de lamp.\n",
+    "    2.  Determine the resistance of the lamp.\n",
     "\n",
-    "    3.  Als je het voltage òf de stroom nauwkeuriger zou kunnen meten, welke zou je dan kiezen en waarom?\n",
+    "    3.  If you could measure either the voltage or the current more accurately, which would you choose and why?\n",
     "```\n",
     "\n",
     "````{solution} ex:lamp\n",
@@ -1105,15 +1106,15 @@
     "\n",
     "2.  $R = (2.4 \\pm 1\\cdot 10^4)  \\Omega$\n",
     "\n",
-    "3.  De stroom, want die heeft de grootste relatieve onzekerheid\n",
+    "3.  The current, because it has the biggest relative uncertainty.\n",
     "````\n",
     "\n",
     "```{exercise}\n",
     ":label: ex:Z\n",
     ":class: dropdown\n",
-    "In de tabel hieronder zijn de waarden en onzekerheden voor variabelen $A$, $B$, en $C$ gegeven. Bereken de waarde en onzekerheden van $Z$ voor de onderstaande gevallen. \n",
+    "The table below gives values and uncertainties for variables $A$, $B$, and $C$. Calculate the value and uncertainties of $Z$ for the cases given below. \n",
     "\n",
-    "**Tabel**: Drie variabelen en hun onzekerheden.\n",
+    "**Tabel**: Three variables and their uncertainties.\n",
     "| $A$   | $u(A)$ | $B$   | $u(B)$ | $C$   | $u(C)$ |\n",
     "|-------|--------|-------|--------|-------|--------|\n",
     "|  5.0  |  0.1   |  500  |   2    |   1   |  0.1   |\n",
