Translation of exercises, grammar fixes

--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -1029,7 +1029,7 @@
     "$$u(g)^2 = \\sum_{i=1}^n \\left(\\frac{\\partial g(x_i)}{\\partial x_i}u(x_i)\\right)^2 =  \\left(\\frac{1}{x}e^{2y}u(x)\\right)^2 + \\left(2\\ln(x)e^{2y}u(y)^2\\right)^2$$\n",
     "```\n",
     "\n",
-    "```{tip} Standard functions \n",
+    "```{admonition} Tip: Standard functions \n",
     ":class: dropdown\n",
     "**Tabel:** Overview of widely used functions and the corresponding uncertainties. \n",
     ">| Function $Z(x,y)$ | $\\frac{dZ}{dx}$ | Uncertainty $u(Z)$                                                  |\n",
@@ -1045,7 +1045,7 @@
     ">| $\\tan{x}$        | $1+\\tan^2{x}$   | $(1+\\tan^2{x})\\cdot u(x)$ or $(1+Z^2) \\cdot u(x)$                    |\n",
     "```\n",
     "\n",
-    "```{tip} Calculation rules\n",
+    "```{admonition} Tip: Calculation rules\n",
     ":class: dropdown\n",
     ">**Reminder:**\n",
     ">\n",
@@ -1135,7 +1135,7 @@
     "3.  $Z = 50 \\pm 5$\n",
     "````\n",
     "\n",
-    "### Dimensioneren\n",
+    "### Dimentioning\n",
     "One advantage of the Calculus method over the Functional Approach is that you can dimension your experiment: based on predefined criteria, you can specify how large the experiment should be, what characteristics it should have, and where most of the time and attention should be focused in order for it to meet the set criteria. The easiest way to explain this is with an example.\n",
     "\n",
     "\n",
@@ -1205,7 +1205,7 @@
     "width: 80%\n",
     "name: fig:least_square_fitting\n",
     "---\n",
-    "Het idee van een least-square methode is dat het oppervlak zo klein mogelijk gemaakt wordt\n",
+    "The idea of a least-square method is that the area is minimized. \n",
     "```\n",
     "\n",
     "You can see when $\\chi^2$ is as small as possible by playing with the sliders below. \n",
@@ -1263,7 +1263,7 @@
     "name: fig:MO:three_graphs\n",
     "---\n",
     "(a) $M(x) = 2x + 0.05 $, (b) $M(x) = 2x + 0.1x$ en $(c) M(x) = 2x + 0.05sin(3x)$. \n",
-    "In elk van de metingen zit een 'verborgen' singaal dat zichtbaar wordt bij analyse van de residuals. Voor alle figuren is er een lijn $F(x) = 2x$ gefit.\n",
+    "Each measurement contains a 'hidden' signal that is visible when analyzing the residuals. In all figures a line $F(x) = 2x$ was fitted. \n",
     "```\n",
     "\n",
     "The second analysis of the residue is based on a histogram. If, based on the experiment, you expect the noise to be normally distributed, then the histogram will be a normally distributed function. You can also apply a function fit to this noise signal, whereby we expect the mean to be 0 and the standard deviation to be determinable.\n",
@@ -1285,7 +1285,7 @@
     "width: 80%\n",
     "name: fig:MO:linearisatie\n",
     "---\n",
-    "Metingen van de slingertijd als functie van de slingerlengte. Ruwe data geplot, er is een wortelverband zichtbaar.\n",
+    "Measurements of the period as a function of the length. Raw data is plotted, a squared root relation is visible. \n",
     "```\n",
     "\n",
     "```{figure} Figures/linearisatie2.png\n",
@@ -1293,7 +1293,7 @@
     "width: 80%\n",
     "name: fig:MO:linearisatie1\n",
     "---\n",
-    "Gelineariseerde data uit {numref}`Figuur {number} <fig:MO:linearisatie>` door $T^2$ uit te zetten tegen $L$. Een eerste order polynoom $T^2(L)=aL + b$ is gefit met coëfficiënten $a = (4.05 \\pm0.01)$ s$^2$/m en $b = (0.015 \\pm 0.09)$ s$^2$\n",
+    "Linearized data from {numref}`Figuur {number} <fig:MO:linearisatie>` by plotting $T^2$ against $L$. A first order polynomial $T^2(L)=aL + b$ was fitted with coefficients $a = (4.05 \\pm0.01)$ s$^2$/m and $b = (0.015 \\pm 0.09)$ s$^2$\n",
     "```\n",
     "````\n",
     "\n",
@@ -1316,7 +1316,7 @@
     "{numref}`Figure {number} <fig:MO:badgraph>` is a good example of a bad graph. First of all, the trend is not visible. There is one point that is well above the others, but are the values for $r>11$ equal to 0 or not? In addition, there are far too many numbers (ticks) on the horizontal axis. The scale for the horizontal axis is also poorly chosen. Furthermore, we are missing what is actually presented on the horizontal and vertical axes.\n",
     "\n",
     "\n",
-    "```{figure} Figures/slechtegrafiek.png\n",
+    "```{figure} Figures/badgraph.png\n",
     "---\n",
     "width: 50%\n",
     "name: fig:MO:slechtegrafiek\n",
@@ -1329,7 +1329,7 @@
     "width: 50%\n",
     "name: fig:MO:beteregrafiek\n",
     "---\n",
-    "Een verbeterde versie van de grafiek\n",
+    "An improved version of the graph\n",
     "```\n",
     "\n",
     "\n",
@@ -1345,20 +1345,20 @@
     "```{exercise}\n",
     ":label: ex-unc\n",
     ":class: dropdown\n",
-    "In de tabel hieronder zijn de waardes van $a$ en $x$ gegeven.\n",
+    "The values of $a$ and $x$ are given in the table below.\n",
     "\n",
     "|   a             |     $u(a)$      |    x             |     $u(x)$      |\n",
     "|-----------------|-----------------|-----------------|-----------------|\n",
     "| $5\\cdot10^{-8}$ | $1\\cdot10^{-9}$ | $5\\cdot10^{-3}$ | $1\\cdot10^{-3}$ |\n",
     "\n",
-    "1.  Bepaal de waarde en onzekerheid van $F = a \\cdot x^{-4}$.\n",
+    "1.  Determine the value and uncertainty of $F = a \\cdot x^{-4}$.\n",
     "\n",
-    "2.  Doe hetzelfde als in de vorige opgave, maar neem nu\n",
-    "    $u(a)  = 1 \\cdot 10^{-9}$ en $u(x)  = 1 \\cdot 10^{-10}$. Wat valt je op?\n",
+    "2.  Perform the same exercise as above, but use\n",
+    "    $u(a)  = 1 \\cdot 10^{-9}$ en $u(x)  = 1 \\cdot 10^{-10}$. What do you notice?\n",
     "\n",
-    "3.  Houd nu $u(a)$ constant, en neem $u(x) = 1\\cdot 10^{-3}$ en $u(x) = 1\\cdot 10^{4}$. Wat valt je op?\n",
+    "3.  Keep $u(a)$ a constant, and use $u(x) = 1\\cdot 10^{-3}$ and $u(x) = 1\\cdot 10^{4}$. What do you notice?\n",
     "\n",
-    "4.  Vergelijk je antwoorden bij vraag b) en c). Waarom schaalt de fout in $F$ lineair met de fout in $a$ maar niet met $x$?\n",
+    "4.  Compare your answers to (2) and (3). Why does the error in $F$ scale linearly with the error in $a$, but not with $x$?\n",
     "```\n",
     "\n",
     "````{solution} ex-unc\n",
@@ -1375,18 +1375,18 @@
     "```{exercise}\n",
     ":label: ex-verg\n",
     ":class: dropdown\n",
-    "Leid vergelijking {eq}`eq:afleiding` af.\n",
+    "Derive equation {eq}`eq:afleiding`.\n",
     "```\n",
     "\n",
     "````{solution} ex-verg\n",
     ":class: dropdown\n",
-    "Pas hier eerst de calculus methode toe, en deel dan door $f$.\n",
+    "First use the calculus method, and then divide by $f$. \n",
     "````\n",
     "\n",
     "```{exercise}\n",
     ":label: ex-afstand\n",
     ":class: dropdown\n",
-    "Een afstand $s$ wordt gemeten als het verschil van twee afstanden $p$ en $q$. De posities van $p$ en $q$ zijn: $p = (30.0\\pm0.9)$ km en $q = (10.0\\pm0.1)$ km. Bereken de afstand $s$ en de bijbehorende onnauwkeurigheid $u(s)$. Noteer het resultaat op de juiste wijze.\n",
+    "A distance $s$ is measured as the difference between two distances $p$ and $q$. The positions of $p$ and $q$ are: $p = (30.0\\pm0.9)$ km and $q = (10.0\\pm0.1)$ km. Calculate the distance $s$ and the corresponding uncertainty $u(s)$. Write the result down using the correct notation. \n",
     "```\n",
     "\n",
     "````{solution} ex-afstand\n",
@@ -1397,7 +1397,7 @@
     "```{exercise}\n",
     ":label: ex-balk\n",
     ":class: dropdown\n",
-    "Beschouw een balk met lengte $L=(7.5\\pm0.1)$ m, breedte $B=(12.5\\pm0.2)$ cm en hoogte $H=(15.0\\pm0.3)$ cm. Het oppervlakte $A$ wordt gegeven door $B \\cdot H$. Bepaal de onnauwkeurigheden $u(A)$ en $u(V)$.\n",
+    "Consider a beam with length $L=(7.5\\pm0.1)$ m, width $B=(12.5\\pm0.2)$ cm en height $H=(15.0\\pm0.3)$ cm. The area $A$ is given by $B \\cdot H$. Determine the uncertainties $u(A)$ and $u(V)$. \n",
     "```\n",
     "\n",
     "````{solution} ex-balk\n",
@@ -1409,17 +1409,17 @@
     "```{exercise}\n",
     ":label: ex-pend\n",
     ":class: dropdown\n",
-    "Met behulp van een pendulum wordt de valversnelling $g$ bepaald. De slingertijd is $T = (1.60\\pm0.03)$ s en de lengte van de slinger is $L = (64.0\\pm0.8)$ cm.\n",
+    "The gravitational acceleration $g$ is determined using a pendulum. The period is $T = (1.60\\pm0.03)$ s and the length of the pendulum is $L = (64.0\\pm0.8)$ cm.\n",
     "\n",
-    "1.  Geef het verband tussen de slingertijd en de slingerlengte.\n",
+    "1.  Give the relation between the period and the length of the pendulum.\n",
     "\n",
-    "2.  Leid uit dit verband een formule af voor de valversnelling $g$.\n",
+    "2.  Use this relation to derive a formula for the gravitational acceleration $g$.\n",
     "\n",
-    "3.  Geef de onnauwkeurigheidsformule voor $u(g)$.\n",
+    "3.  Give the formula for the uncertainty $u(g)$.\n",
     "\n",
-    "4.  Bereken $g$ en $u(g)$ en noteer de resultaten op de juiste wijze.\n",
+    "4.  Calculate $g$ and $u(g)$ and write the results down using the correct notation.\n",
     "\n",
-    "5.  Welke variabele heeft de grootste invloed op de onnauwkeurigheid?\n",
+    "5.  Which variable has the biggest influence of the uncertainty?\n",
     "```\n",
     "\n",
     "````{solution} ex-pend\n",
@@ -1434,13 +1434,13 @@
     "    $u(g) = 0.39 \\space \\text{m/s}^2$\\\n",
     "    dus $g = (9.9 \\space \\pm 0.4)\\text{m/s}^2$\n",
     "\n",
-    "5.  $T$, factor 4x zo groot op de berekening van $u(g)$. 10x zo groot in precieze berekening.\n",
+    "5.  $T$, factor 4x as big on the calculation of $u(g)$. 10x as big in the more precise calculation.\n",
     "````\n",
     "\n",
     "```{exercise}\n",
     ":label: ex-G\n",
     ":class: dropdown\n",
-    "De relatie tussen grootheid $G$ hangt af van de gemeten grootheden $x$ en $y$ wordt gegeven door $G(x,y)=\\frac{1}{2} x y^{3} + 5 x^{2} y$. De onnauwkeurigheden in $x$ en $y$ zijn respectievelijk $u(x)$ en $u(y)$. Bepaal de onnauwkeurigheidsformule voor $u(G)$.\n",
+    "Variable $G$ is dependent on the measured variables $x$ and $y$, and their relation is $G(x,y)=\\frac{1}{2} x y^{3} + 5 x^{2} y$. The uncertainties in $x$ and $y$ are $u(x)$ and $u(y)$, respectively. Determine the equation for the uncertainty $u(G)$. \n",
     "```\n",
     "\n",
     "````{solution} ex-G\n",
@@ -1454,7 +1454,7 @@
     "```{exercise}\n",
     ":label: ex-bol\n",
     ":class: dropdown\n",
-    "Beschouw een bol met straal $R=(3.02 \\pm 0.06)$ m. Bepaal het oppervlak $A$ en het volume $V$ met bijbehorende (relatieve) onnauwkeurigheden.\n",
+    "Consider a sphere with radius $R=(3.02 \\pm 0.06)$ m. Determine the surface area $A$ and the volume $V$ with the corresponding (relative) uncertainties. \n",
     "```\n",
     "\n",
     "````{solution} ex-bol\n",
@@ -1469,7 +1469,7 @@
     "```{exercise}\n",
     ":label: ex-sin\n",
     ":class: dropdown\n",
-    "Beschouw $f(x)=2\\sin{x}$, waarbij $x$ een gemeten grootheid is met onnauwkeurigheid $u(x)$. Leid een formule af voor de onnauwkeurigheid $u(f)$.\n",
+    "Consider $f(x)=2\\sin{x}$, with $x$ a measured quantity with uncertainty $u(x)$. Derive an equation for the uncertainty $u(f)$.\n",
     "```\n",
     "\n",
     "````{solution} ex-sin\n",
@@ -1480,7 +1480,7 @@
     "```{exercise}\n",
     ":label: ex-relatie\n",
     ":class: dropdown\n",
-    "Hoe kan je de onderstaande relaties (1-4) lineariseren, zodat je ze als rechte lijn $y = mx + c$ kunt plotten? Geef de uitdrukking voor de helling $m$, en het snijpunt $c$.\n",
+    "How can you linearize the relations (1-4) below, such that they can be plotted as a straight line $y = mx + c$? Give the expression for the slope $m$, and the intersection $c$.\n",
     "\n",
     "1.  $V = aU^2$\n",
     "\n",
@@ -1493,13 +1493,13 @@
     "\n",
     "````{solution} ex-relatie\n",
     ":class: dropdown\n",
-    "1.  $y$-as: $\\sqrt{V}$, $x$-as: $U$. m: $\\sqrt{a}$, c: 0\n",
+    "1.  $y$-axis: $\\sqrt{V}$, $x$-axis: $U$. m: $\\sqrt{a}$, c: 0\n",
     "\n",
-    "2.  $y$-as: $V^2$, $x$-as: $U$. m: $a^2$, c: 0\n",
+    "2.  $y$-axis: $V^2$, $x$-axis: $U$. m: $a^2$, c: 0\n",
     "\n",
-    "3.  $y$-as: $\\ln{V}$, $x$-as: $U$. m: $-b$, c: 0\n",
+    "3.  $y$-axis: $\\ln{V}$, $x$-axis: $U$. m: $-b$, c: 0\n",
     "\n",
-    "4.  $y$-as: $\\frac{1}{V}$, $x$-as: $\\frac{1}{U}$. m: $-1$, c:\n",
+    "4.  $y$-axis: $\\frac{1}{V}$, $x$-axis: $\\frac{1}{U}$. m: $-1$, c:\n",
     "    $\\frac{1}{a}$\n",
     "\n",
     "5.  $\\frac{1}{U} + \\frac{1}{V} = \\frac{1}{a}$\n",
