--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -1141,21 +1141,21 @@
     "\n",
     "```{admonition} Example: \n",
     ":class: dropdown, tip\n",
-    "You want to use a mass-spring system to accurately determine the mass of 10 different weights. The manufacturer states that the weights have a mass of (50 ± 3) g. However, you want to know the exact mass of each weight, accurate to the nearest gram. The maximum relative uncertainty is therefore 2%. What does the experiment look like?\n",
+    "You want to use a mass-spring system to accurately determine the mass of 10 different loads. The manufacturer states that these loads have a mass of (50 ± 3) g. However, you want to know the exact mass of each load, accurate to the nearest gram. The maximum relative uncertainty is therefore 2%. What does the experiment look like?\n",
     "\n",
     "The mass of the mass-spring system is calculated as follows: \n",
     "\n",
     "$$m = \\frac{CT^2}{4\\pi^2}$$\n",
     "\n",
-    "De onzekerheid in de massa wordt daarmee gegeven door:\n",
+    "The uncertainty in the mass is then given by: \n",
     "\n",
     "$$\\left ( \\frac{u(m)}{m} \\right )^2 = 4\\left ( \\frac{u(T)}{T} \\right )^2+\\left ( \\frac{u(C)}{C} \\right )^2$$\n",
     "\n",
-    "De massa is hier de massa van het gewichtje aan de veer $m_w$ en een onbekend deel van de massa van de veer $m_C$ zelf:\n",
+    "The mass is here the mass of the weight on the spring $m_w$ and an unknown part of the mass of the spring $m_C$ itself:\n",
     "\n",
     "$$m = M_w + m_C$$\n",
     "\n",
-    "De onzekerheid in de massa van het gewichtje wordt daarmee:\n",
+    "The uncertainty in the mass of the weight is then given by:\n",
     "\n",
     "$$u(M_w)^2 =  u(m)^2 + u(m_C)^2 = \\left (  4\\left ( \\frac{u(T)}{T} \\right )^2+\\left ( \\frac{u(C)}{C} \\right )^2 \\right ) m^2 + u(m_C)^2$$\n",
     "\n",
@@ -1519,7 +1519,7 @@
    "formats": "ipynb,md"
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -1533,7 +1533,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.13.5"
   }
  },
  "nbformat": 4,
