--- a/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
+++ b/book/Course files/Notebook 6/Notebook 6 Measurement uncertainty.ipynb
@@ -1313,17 +1313,19 @@
     "\n",
     "There are many ways in which you can present your data poorly. There are only a few ways in which you can do it well. The most important thing when creating a graph is that it is clear and that it is obvious to the reader what they should be looking at.\n",
     "\n",
-    "{numref}`Figure {number} <fig:MO:badgraph>` is a good example of a bad graph. First of all, the trend is not visible. There is one point that is well above the others, but are the values for $r>11$ equal to 0 or not? In addition, there are far too many numbers (ticks) on the horizontal axis. The scale for the horizontal axis is also poorly chosen. Furthermore, we are missing what is actually presented on the horizontal and vertical axes.\n",
+    "{numref}`Figure {number} <fig:MO:slechtegrafiek>` is a good example of a bad graph. First of all, the trend is not visible. There is one point that is well above the others, but are the values for $r>11$ equal to 0 or not? In addition, there are far too many numbers (ticks) on the horizontal axis. The scale for the horizontal axis is also poorly chosen. Furthermore, we are missing what is actually presented on the horizontal and vertical axes.\n",
     "\n",
     "\n",
-    "```{figure} Figures/badgraph.png\n",
+    "```{figure} Figures/slechtegrafiek.png\n",
     "---\n",
     "width: 50%\n",
     "name: fig:MO:slechtegrafiek\n",
     "---\n",
     "A great example of an ugly graph\n",
     "```\n",
+    "\n",
     "{numref}`Figuur {number} <fig:MO:beteregrafiek>` presents the same data. The differences may be clear, the data are displayed on a log-log scale, and a trend line shows the relationship between force and distance. The number of ticks is limited. The graph could be further improved by including the measurement uncertainty.\n",
+    "\n",
     "```{figure} Figures/beteregrafiek.png\n",
     "---\n",
     "width: 50%\n",
