--- a/book/Course files/Modelling/Intro.ipynb
+++ b/book/Course files/Modelling/Intro.ipynb
@@ -2,44 +2,28 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "02b7e3a0",
-   "metadata": {},
-   "source": [
-    "# Introduction to modeling\n",
-    "Step by step\n",
-    "\n",
-    "Initial conditions\n",
-    "Boundary conditions\n",
-    "Variables\n",
-    "Auxiliary variables\n",
-    "\n",
-    "Physical knowledge is important\n",
-    "\n",
-    "Drawing is important\n",
-    "\n",
-    "Python vs. Coach vs. C++ vs...\n",
-    "\n",
-    "Python vs. Coach vs. C++ vs..."
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "5de1e4f4",
    "metadata": {},
    "source": [
     "# Introduction to Modeling\n",
     "\n",
-    "In physics, we use models to understand, predict, and simulate reality. A model is a simplified representation of the real world — designed to help us grasp complex systems. Think of the motion of a falling apple, the weather, or the behavior of an electron in a magnetic field.\n",
+    "In physics, we use models to understand, predict, and simulate reality. A model is a simplified representation of the real world — designed to help us understand complex systems. Think of the motion of a falling apple, the weather, or the behavior of an electron in a magnetic field.\n",
     "\n",
-    "Modeling is not just mathematics. It’s a creative and critical process where physical knowledge, computational power, and logic come together.\n",
+    "Modeling is not just mathematics. It iss a creative and critical process where physical knowledge, computational power, and logic come together.\n",
     "\n",
+    "We consider that the physical model is present, so that we can focus on the computational aspects. This means you should already understand the physics behind the problem you want to model and have described it in detail. Without solid physical insight, a model can be misleading or wrong, even if the code runs perfectly. A model is only as good as the physical assumptions it’s based on:\n",
+    "\n",
+    "    What forces are acting?\n",
+    "\n",
+    "    Can you ignore air resistance?\n",
+    "\n",
+    "    Does Newton’s second law apply here?\n",
+    "\n",
+    "## Components of a computational model\n",
     "A good model is built in clear steps:\n",
-    "1. Initial conditions\n",
+    "1. **Initial conditions** These are the starting values of your system. For example: a ball starts at a height of 2.0 m with a velocity of 0 m/s. These values are essential for a simulation: they determine how the system evolves from the beginning.\n",
     "\n",
-    "These are the starting values of your system. For example: a ball starts at a height of 2.0 m with a velocity of 0 m/s. These values are essential for a simulation: they determine how the system evolves from the beginning.\n",
-    "2. Boundary conditions\n",
-    "\n",
-    "Boundary conditions specify what happens at the 'edges' of your model. For example:\n",
+    "2. **Boundary conditions** Boundary conditions specify what happens at the 'edges' of your model. For example:\n",
     "\n",
     "    A spring can stretch a maximum of 10 cm.\n",
     "\n",
@@ -48,9 +32,8 @@
     "    There is no friction outside a certain area.\n",
     "\n",
     "They constrain your model and ensure your simulation remains realistic.\n",
-    "3. Variables\n",
     "\n",
-    "Variables describe the state of the system at any given moment, for example:\n",
+    "3. **Variables** Variables describe the state of the system at any given moment, for example:\n",
     "\n",
     "    position x\n",
     "\n",
@@ -59,38 +42,22 @@
     "    time t\n",
     "\n",
     "These change continuously during the simulation.\n",
-    "4. Auxiliary variables\n",
+    "\n",
+    "4. **Auxiliary variables**\n",
     "\n",
     "Sometimes you need extra variables that don’t directly describe the state, but are necessary for your calculations. Think of:\n",
     "\n",
-    "    acceleration a as the derivative of v\n",
+    "    acceleration $a$ as the derivative of $v$\n",
     "\n",
-    "    force F = m·a\n",
+    "    force $F = m·a$\n",
     "\n",
-    "    intermediate results like delta_v or energy\n",
+    "    intermediate results like $\\Delta v$ or energy\n",
     "\n",
     "These make your code and reasoning clearer and more reusable.\n",
     "\n",
-    "A model is only as good as the physical assumptions it’s based on:\n",
     "\n",
-    "    What forces are acting?\n",
     "\n",
-    "    Can you ignore air resistance?\n",
-    "\n",
-    "    Does Newton’s second law apply here?\n",
-    "\n",
-    "Without solid physical insight, a model can be misleading or wrong, even if the code runs perfectly.\n",
-    "\n",
-    "A sketch or diagram of the situation is not a luxury — it’s an essential part of modeling. Drawing forces you to:\n",
-    "\n",
-    "    Visualize the forces\n",
-    "\n",
-    "    Clarify what you’re modeling (and what you’re leaving out)\n",
-    "\n",
-    "    Link your variables visually to reality\n",
-    "\n",
-    "Modeling without drawing is like building without a blueprint.\n",
-    "\n",
+    "## Tools for modeling and simulation\n",
     "There are various tools and languages you can use to create models and run simulations:\n",
     "\n",
     "| Tool/Language | Advantages                                                                                           | Disadvantages                                         |\n",
@@ -100,8 +67,7 @@
     "| **C++**       | Fast, suitable for large and heavy simulations.                                                     | Complex syntax, not beginner-friendly                 |\n",
     "| **Excel**     | Good for simple numerical models, easy to start with.                                               | Limited scalability and repeatability                 |\n",
     "\n",
-    "For this course, we use Python because it offers a good balance between accessibility and flexibility. You’ll learn not only modeling, but also programming — two skills that are increasingly important in physics.\n",
-    "\n"
+    "For this course, we use Python because it offers a good balance between accessibility and flexibility. \n"
    ]
   },
   {
