--- a/book/Course files/Modelling/Basics.ipynb
+++ b/book/Course files/Modelling/Basics.ipynb
@@ -147,8 +147,9 @@
     "Let's return to the spring-mass system. Check the notes below on the sketch of the physical model to come up with the computational model.\n",
     "\n",
     "```{figure} model_tekening.jpg\n",
+    ":width: 50%\n",
     "\n",
-    "A sketch of the physical model used to create the computational model.\n",
+    "An initial sketch of the physical model used to create the computational model.\n",
     "```\n",
     "\n",
     "\n",
@@ -210,7 +211,7 @@
    "id": "3588cb32-2b5d-445f-88b9-399dcabd7a80",
    "metadata": {},
    "source": [
-    "Er zijn betere (d.w.z. stabielere) oplossingen, zoals de Runge-Kutta 4 methode. Die werken we (mathematisch) hier niet uit. Zie je dat je simulatie instabiel is, dan kun je m.b.v. bijvoorbeeld co-pilot een betere simulatie krijgen.\n"
+    "There are better (i.e., more stable) solutions, such as the Runge-Kutta 4 method. We won't work this out mathematically here. If you notice your simulation is unstable, you can use, for example, Copilot to obtain a better simulation.\n"
    ]
   },
   {
