--- a/book/Course files/Notebook 4/Notebook 4 Scientific Computing.ipynb
+++ b/book/Course files/Notebook 4/Notebook 4 Scientific Computing.ipynb
@@ -218,7 +218,7 @@
     }
    },
    "source": [
-    "**WRONG!** Why? Because the makers of Python decided to start counting from zero: the first element of a tuple `a` is actually `a[0]`. \n",
+    "**WRONG!** Why? Because the makers of Python decided to start counting from zero: the first element of an sequence `a` is actually `a[0]`. \n",
     "\n",
     "(This is a long-standing <a href=https://en.wikipedia.org/wiki/Zero-based_numbering>discussion among computer scientists</a>, and the convention is <a href=https://en.wikipedia.org/wiki/Comparison_of_programming_languages_(array)#Array_dimensions>different</a> in many different languages. There are advantages and disadvantages of both, and even essays written about it...but in any case, Python chose to start arrays at zero.)\n",
     "\n",
@@ -399,7 +399,7 @@
     "\n",
     "To do this, I put not just a single number inside my square brackets, but instead two numbers, separated by a colon `:`\n",
     "\n",
-    "`a[n:m]` will return a new tuple that consist of all the elements in `a`, starting at element `n` and ending at element `m-1`. \n",
+    "`a[n:m]` will return a view of the array that consist of all the elements in `a`, starting at element `n` and ending at element `m-1`. \n",
     "\n",
     "Let's look at a concrete example:"
    ]
