--- a/book/Course files/Notebook 4/NB4_ex_sol.ipynb
+++ b/book/Course files/Notebook 4/NB4_ex_sol.ipynb
@@ -243,8 +243,8 @@
     "\n",
     "plt.figure()\n",
     "plt.plot(np.arange(1,len(measurements)+1), average_n)\n",
-    "plt.xlabel('average')\n",
-    "plt.ylabel('n')\n",
+    "plt.xlabel('n')\n",
+    "plt.ylabel('average')\n",
     "plt.show()"
    ]
   },
